Fixed more spacing issues

--- a/src/scss/components/quote.scss
+++ b/src/scss/components/quote.scss
@@ -1,7 +1,7 @@
 @use "../abstracts/colors" as *;
 
 .quote {
-  margin-top: 2rem;
+  margin-block: 1rem;
   border-block: 0.1rem solid $faded-color;
   padding-block: 1rem;
   blockquote {
